--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,5 @@
-/*
-*   https://fonts.google.com/specimen/Libre+Barcode+39+Text?preview.text=CHEAP%20BUY&preview.text_type=custom&category=Display
-*/
+/* https://fonts.google.com/specimen/Libre+Barcode+39+Text?preview.text=CHEAP%20BUY&preview.text_type=custom&category=Display */
+
 
 @import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&display=swap');
 
