--- a/src/pages/Store/Store.css
+++ b/src/pages/Store/Store.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .store-item-container {
